senthil UI changes

--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -20,6 +20,9 @@
   <%= render 'preferred_programmes', :f => f %>
   
   
+  <div class="cl"></div>
+  <br/>
+  <br/>
   
   <div class="actions" style="margin-bottom:10px;">
    <%= f.submit "Save",{:class => "btnp fr"} %>
