--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -53,6 +53,7 @@
 $(function(){
 dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>");
 setColorsFromSession();
+activeMM("enquiriesMM");
 });
 </script>
             
