--- a/app/views/enquiries/_preferred_programmes.html.erb
+++ b/app/views/enquiries/_preferred_programmes.html.erb
@@ -4,8 +4,15 @@
         </div><br/>  
   
   <%= f.fields_for :programmes do |p| %>
-    <%= render 'programme_details', :p => p, :parent => f.object_name.to_s %>  
+    <div class="cols boxstheme " style="width:97%">
+        <%= p.link_to_remove (image_tag "/images/icons/quit.png", size: "30x30") ,class: "fr" %>
+        <%= render 'programme_details', :p => p, :parent => f.object_name.to_s %>
+    </div>
+    
+    <div class="cl">
+    </div>
+    <br/>
   <% end %>
-  <br/>
-   <%= f.link_to_add "Add more", :programmes,{:class => "btns fl"} %>
+  
+  <%= f.link_to_add "Add one more programme", :programmes,{:class => "btns fl"} %>
    
