--- a/app/views/user_configs/_form.html.erb
+++ b/app/views/user_configs/_form.html.erb
@@ -1,14 +1,11 @@
 <div class="tab-container">
-
+<ul class="tab-menus">
+  <li class="active-tab">
+  User Configuration
+  </li>
+</ul>
 <div class="tab-content" style="background: none repeat scroll 0% 0% rgb(232, 240, 0); display: block;">
-
-    <div class="htab">
-      <h5>
-        User Configuration
-      </h5>
-      <div class="cl"></div>
-    </div>
-    <br/>
+<br/>
 
     <% tabs_arr = %w(Followup Note Columns Colors Email) %>
     <div class="newtab-container">
