--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,17 @@
     <div class="cl"></div>
     <div class="uiboxs">
     <ul class="lsn">
-        <li><a hre="#">My Setting</a></li>
+        <li>
+        <%= link_to "My Settings", "/user_configs/#{current_user.id}/edit" %>
+        </li>
     </ul>
      <ul class="lsn">
         <li>
         <%= link_to "New Enquiry", new_enquiry_path %>
         </li>
-        <li><a href="#">Create Task</a></li>
+        <li>
+        <%= link_to "New Registration", new_registration_path %>
+        </li>
     </ul>
   
     <ul  class="lsb">
