--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -395,6 +395,16 @@ body > * {visibility: hidden;}
 .glink:hover{text-decoration:underline;cursor:pointer;}
 /* LINKS - ENDS*/
 
+/* POPUP - STARTS */
+.popuptitle{font-size:14px;font-weight:bold;color:#fff;padding:5px 10px 5px 10px;background:#2A88C8} 
+.addNewPop {padding: 0;border: 1px solid #ccc;box-shadow: 0 0 5px #ccc;border-radius: 5px;display: none;position: absolute;z-index: 100000000000;
+background: #fff;overflow:hidden}
+.popupc{padding:3px 10px 2px 10px;text-align:left !important}
+.popupc label{text-align:left !important;}
+.popupc textarea,.popupc input{margin-left:0}
+.popupbtns{background:#F4F4F4;border-top:1px solid #E8E8E8;padding:5px}
+/* POPUP - ENDS */
+
 /* THEME & BACKGROUND - STARTS */
 .theme-colrs{padding:0;margin:0;list-style:none}
 .theme-colrs li{margin:0 5px 0 0;display:inline;border:0px solid #A0A0A0;padding:1px;background:#fff}
