--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -17,6 +17,10 @@
  
   <%= render 'preferred_countries', :f => f %>
   
+   <div class="htab">
+     <h5><b>Programmes Interested</b></h5>
+   </div>
+   <br/>   
   <%= render 'preferred_programmes', :f => f %>
   
   
