--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -174,7 +174,7 @@ input[type=radio]{padding-right:5px}
 .dataTable tr td:first-child{white-space:nowrap !important;width:auto !important}
 .dataTable tr th a,.dataTable tr th a:hover,.dataTable tr th a:active,.dataTable tr th a:link{font-size:12px !important;color:#5E6E7F !important;text-decoration:none !important;cursor:pointer !important}
 .dataTable tr td{background:#fff !important;padding:5px 0 5px 5px !important;font-size:12px !important;color:#505050 !important;cursor:pointer !important;font-weight:normal !important}
-.dataTable tr td{border-bottom:1px solid #F5F5F5 !important;border-right:1px solid #F5F5F5 !important}
+.dataTable tr td{border-bottom:1px solid #EAEAEA !important;border-right:1px solid #EAEAEA !important}
 .dataTable tr td:last-child{border-right:0 !important}
 .dataTable tr:hover td{background:#FAFAFA !important;color:#000000 !important}
 .dataTable tr td a,.dataTable tr td a:hover,.dataTable tr td a:active,.dataTable tr td a:link{font-size:12px !important;color:#0F5491 !important;cursor:pointer !important}
@@ -182,7 +182,7 @@ input[type=radio]{padding-right:5px}
 .fg-toolbar{background:#EAEAEA !important;border-top:1px dashed #F5F5F5 !important;border:1px solid #E2E2E2  !important;border:0  !important;padding:5px 10px 5px 10px !important;font-size:12px !important;color:#5E6E7F !important;cursor:pointer !important;font-weight:normal !important;text-align:left !important}
 .dataTable tr td img{-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)" !important;filter: alpha(opacity=50) !important;-moz-opacity: 0.5 !important;-khtml-opacity: 0.5 !important;opacity: 0.5 !important;}
 .dataTable tr:hover td img{-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)" !important;filter: alpha(opacity=80) !important;-moz-opacity: 0.8 !important;-khtml-opacity: 0.8 !important;opacity: 0.8 !important;}
-.ui-widget-header{background:#EAEAEA !important; }
+div.dataTables_wrapper .ui-widget-header{background:#EAEAEA !important; }
 /* TABLE - ENDS */
 
 .sp{color:#FD9B00}
